--- a/frontend/src/sass/global.scss
+++ b/frontend/src/sass/global.scss
@@ -10,16 +10,71 @@ body {
   font-family: sofia-pro, sans-serif;
   font-weight: 400;
   font-style: normal;
-
   background-color: #101319;
+  overflow-y: hidden;
 }
 
 p {
   color: white;
 }
 
+.App {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100vh;
+}
+
 .container {
+  width: 100vw;
   padding: 25px 100px 0px 100px;
+  position: relative;
+  transition: transform 0.3s ease;
+  height: 100vh;
+}
+
+.page {
+  height: 100vh;
+  width: 100%;
+}
+
+.activateNAV {
+  transform: scale(0.3);
+  overflow-y: hidden;
+}
+
+.activateNAVHeight {
+  height: 100vh;
+}
+
+.navPageContainer {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  overflow-x: auto;
+
+  .inner {
+    display: inline-flex;
+    transition: opacity 0.3s ease;
+  }
+
+  .navigationButton {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+
+    .homePageImage {
+      bottom: 0;
+      opacity: 0.6;
+    }
+  }
+}
+
+.openGame {
+  transition: all 0.3s ease;
+  position: absolute;
+  transform: scale(3.5);
 }
 
 @import './tools/hamburgers.css';
